--- a/admin/configuration_sample.ini
+++ b/admin/configuration_sample.ini
@@ -1,10 +1,12 @@
 [settings]
-licensingModule=
-licensingDatabaseName=""
-usageModule=
-resourcesModule=
+licensingModule=N
+licensingDatabaseName=
+usageModule=N
+managementModule=N
+resourcesModule=N
 resourcesDatabaseName=
-authModule=
+resourcesIssues=N
+authModule=N
 authDatabaseName=
 remoteAuthVariableName="_SERVER['REMOTE_USER']"
 
